[TASK] Add method bot-play and additional methods for the game board
